--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -143,7 +143,7 @@ pre {
 @import "parts/tags";
 
 /* = = = = = = = = = = Animate Styles = = = = = = = = = = */
-@import "parts/animate";
+// @import "parts/animate";
 
 /* = = = = = = = = = = Media = = = = = = = = = = */
 @import "media"
